--- a/index.html
+++ b/index.html
@@ -1,8 +1,2 @@
-<!--<div style="text-align: center; background-color:none!important;">
-    <img id="imgClientSignature" style=" border: 1px solid #dadada; max-height: 25px; width: 156px; text-align: center;" src="AccountOpeningForm/ImagesEquity/signature.png" alt="">
-</div>-->
-<div style="float:left;width:100%;">
-
-    <p style="float: left; font-family: arial; font-size: 12px; width: 67%; text-align: left; margin-left: 15px;"Welcome to Jenkins</p>
-    <p style="float: right; font-family: arial; font-size: 12px; text-align: right; width: 30%; margin-right: 15px;"><b><!--Ver 4.5 / June 2019--><!--Ver 4.6 / Feb 2020-->  Ver-5.0/Oct 2021</b></p>
-</div>
+ <p>Welcome to Jenkins</p>
+  
